<package>
  <name>dead_reckoning</name>
  <version>0.1.0</version>
  <description>Example of dead reckoning</description>
<license>BSD</license>

  <author email="kwahl@kth.se">Kristian Wahlqvist</author>
  <maintainer email="kwahl@kth.se">Kristian Wahlqvist</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>phidgets</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>phidgets</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
