<package>
 <name>mylab1_launch</name>
  <version>0.1.0</version>
  <description>
    Launch files for phidget motors.
  </description>
  <license>BSD</license>

  <author email="kwahl@kth.se">Kristian Wahlqvit</author>
  <maintainer email="kwahl@kth.se">Kristian Wahlqvist</maintainer>

  <buildtool_depend>catkin</buildtool_depend>


  <run_depend>motor_controller</run_depend>
  <run_depend>dead_reckoning</run_depend>
  <run_depend>test_controller</run_depend>

</package>
