<package>
  <name>robot_motors</name>
  <version>0.1.0</version>
  <description>
    Robot motors metapackage.
  </description>
  <license>BSD</license>


  <author email="kwahl@kth.se">Kristian Wahlqvist</author>
  <maintainer email="kwahl@kth.se">Kristian Wahlqvist</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ras_phidget</run_depend>
  <run_depend>motor_controller</run_depend>
  <run_depend>dead_reckoning</run_depend>
  <run_depend>test_controller</run_depend>



  <export>
    <metapackage/>
  </export>
</package>
