<?xml version="1.0"?>
<package>
  <name>robot_motors_launch</name>
  <version>0.0.0</version>
  <description>The robot_motors_launch package</description>

  <maintainer email="jantos@kth.se">Thomas Jantos</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>motor_controller</run_depend>
  <run_depend>dead_reckoning</run_depend>
  <run_depend>test_controller</run_depend>
  <export>

  </export>
</package>
