<package>
  <name>test_controller</name>
  <version>0.1.0</version>
  <description>Test controller for robot motors</description>
<license>BSD</license>

  <author email="kwahl@kth.se">Kristian Wahlqvist</author>
  <maintainer email="kwahl@kth.se">Kristian Wahlqvist</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>




</package>
